--- a/changelog.mdx
+++ b/changelog.mdx
@@ -21,7 +21,7 @@ View logs using the Chalk CLI! Inspect your log stream the same way you would fr
 ## Export and view metrics using the CLI
 
 View and export metrics using the Chalk CLI!
-In addition to exporting metrics from with a custom OpenMetrics compatible collector, you can now also export metrics directly using the CLI.
+In addition to exporting metrics with a custom OpenMetrics compatible collector, you can now also export metrics directly using the CLI.
 `chalk metrics export`
 
 ## Visualize and trace your feature's data lineage with a Graph View
