update resolver-input and resolver-output links

--- a/resolver-inputs.mdx
+++ b/resolver-inputs.mdx
@@ -16,7 +16,7 @@ arguments to the resolver function.
 To depend on features from a [feature class](/docs/features),
 label your resolver arguments with your features as the types.
 You can then use those arguments in the body of your resolver to
-compute your [output features](/docs/resolver-outputs).
+compute your [output features](/docs/python-resolvers#outputs).
 If you're running our [editor plugin](/docs/editor-setup),
 your editor will see the type of each variable as the type
 of the underlying scalar.
