--- a/resolver-overview.mdx
+++ b/resolver-overview.mdx
@@ -20,8 +20,8 @@ are computed.
 
 Resolvers have four main components: inputs, outputs, code, and run conditions.
 
-The first three of these are rather straightforward. The [**inputs**](/docs/resolver-inputs) to a resolver
-are the features it uses to compute its output. The [**outputs**](/docs/resolver-outputs) of a resolver
+The first three of these are rather straightforward. The [**inputs**](/docs/python-resolvers#inputs) to a resolver
+are the features it uses to compute its output. The [**outputs**](/docs/python-resolvers#outputs) of a resolver
 are the features that it computes. The code of the resolver is the logic that
 transforms your input features into your output features.
 
