--- a/materialized_aggregations.mdx
+++ b/materialized_aggregations.mdx
@@ -2,15 +2,15 @@
 title: Materialized Windowed Aggregations
 metaTitle: Materialized Windowed Aggregations
 metaDescription: With Chalk, machine learning teams don’t need to spin up separate pipelines, developers can (cache) materialize aggregations and improve performance of expensive computations with just a single line of code
-description: Cache and materialize a feature aggregation
+description: Cache and materialize feature aggregations
 published: true
 ---
 
-Machine learning teams often build and maintain separate pre-aggregation pipelines that are then ingested--as standalone
+Machine learning teams often build and maintain separate pre-aggregation pipelines that relay data--as standalone
 features--into a feature store to reduce the latency of computing expensive features.
 
-With Chalk, teams don’t need to spin up separate pipelines, developers can materialize aggregations to improve
-performance all without compromising on flexibility, with just a single line of code:
+With Chalk, teams don’t need to spin up separate pipelines. Developers can materialize aggregations to improve
+performance, without compromising on flexibility, with just a single line of code:
 
 ```py
 from chalk.streams import Windowed, windowed
@@ -18,14 +18,12 @@ from chalk.streams import Windowed, windowed
 @features
 class User:
     id: int
-    transactions: DataFrame[transactions]
+    transactions: DataFrame[Transactions]
     total_transaction_amount: Windowed[int] = windowed(
         "1d",
         "7d",
         "30d",
-        materialization={ # materialize your features in a single line
-            "bucket_duration": "1d", # specify the bucket
-        },
+        materialization={"bucket_duration": "1d"}, # materialize your features in a single line
         expression=_.transactions[_.amount].sum(),
     )
 ```
@@ -35,13 +33,13 @@ class User:
 ## Why are materialized aggregations useful?
 
 Windowed features are typically computed using either raw data or pre-aggregated data.
-Raw data has the most accuracy, but can be slow if you request longer time windows or large volumes of data.
+Raw data is the ground truth, but aggregating it can be slow if you request long time windows or large volumes of data.
 Some systems improve performance by serving features from pre-aggregated batch data.
 Pre-aggregated data mitigates high latency with the trade-off of not having access to the freshest data.
 
 Chalk balances accuracy and performance by combining both approaches.
 Chalk aggregates historical data while continuously updating your features as new data arrives.
-Chalk automatically rolls new data into the appropriate buckets and updates the aggregations.
+Chalk automatically rolls new data into the appropriate buckets and reconstructs the aggregations.
 Buckets that become stale i.e. no longer relevant to any of your active time windows, are automatically cleaned up.
 
 Chalk aligns buckets on Unix epoch (ignoring leap seconds).
@@ -51,34 +49,37 @@ When serving windowed queries, Chalk uses all buckets containing any overlap wit
 
 ## How do I use materialized aggregations with Chalk?
 
-Materialize a feature aggregation in Chalk, by supplying the [`materialization`](/api-docs#windowed.materialization) parameter of the windowed
-function of the feature you want to aggregate.
+Users can materialize a feature aggregation in Chalk by supplying the [`materialization`](/api-docs#windowed.materialization)
+parameter of the `windowed` function on the feature you want to aggregate.
 In the example above, we specify a `bucket_duration` of `"1d"`.
 
-The materialization parameter takes in a dictionary that adheres to the schema outlined by MaterializationWindowConfig:
+The materialization parameter takes in a dictionary that adheres to the schema outlined by `MaterializationWindowConfig`:
 
-- `bucket_duration`: [Duration](/api-docs#Duration)
+<AttributeTable title={'Materialization Configuration'}>
+    <Attribute field={'bucket_duration'} kind={'Duration'}>
+        The <a href="/api-docs#Duration">Duration</a> of each bucket in the window e.g. "1h"
+    </Attribute>
+    <Attribute field={'bucket_durations'} kind={'Mapping[Duration, Sequence[Duration] | Duration]'}>
+        A dictionary that specifically maps bucket durations to your window intervals e.g.
+        if you wanted to use <code className="dark:text-white">"10m"</code> bucket durations for your
+        <code className="dark:text-white">"1d"</code> window interval and
+        <code className="dark:text-white">"3d"</code> bucket durations for your <code className="dark:text-white">"30d"</code> window interval.
+        We recommend explicitly mapping bucket durations to each window if your window intervals have a wide discrepancy e.g.
+        ten minute bucket duration with a one year window interval.
+        Any window intervals not explicitly included in the <code className="dark:text-white">"bucket_durations"</code>
+        dictionary will use your supplied <code className="dark:text-white">"bucket_duration"</code> by default.
+    </Attribute>
+    <Attribute field={'backfill_schedule'} kind={'CronTab | None'}>
+        The schedule on which to automatically backfill the aggregation.
+        For example, <code className="dark:text-white">"* * * * *"</code>
+        or <code className="dark:text-white">"1h"</code>.
+        See <a href="/api-docs#CronTab">CronTab</a> for more details.
+    </Attribute>
+    <Attribute field={'continuous_buffer_duration'} kind={'Duration | None'}>
+        The minimum period of time for which to sample data directly via online query, rather than from the backfilled aggregations.
+    </Attribute>
+</AttributeTable>
 
-Duration of each bucket in the window e.g. "1h"
-
-- `bucket_durations`: Mapping\[[Duration](/api-docs#Duration), Sequence[[Duration](/api-docs#Duration)] | [Duration](/api-docs#Duration)]\]
-
-A dictionary that specifically maps bucket_durations to your window intervals e.g. if you wanted to use `"10m"` bucket
-durations for your 1d window interval and `"3d"` bucket durations for your `"30d"` window interval.
-We recommend explicitly mapping bucket durations to each window if your window intervals have a wide discrepancy e.g.
-ten minute bucket duration with a one year window interval.
-
-Any window intervals not explicitly included in the `bucket_durations` dictionary will use your supplied
-`bucket_duration` by default.
-
-`backfill_schedule`: \[[CronTab](/api-docs#CronTab) | None\]
-
-The schedule on which to automatically backfill the aggregation.
-For example, `"* * * * *"` or `"1h"`.
-
-`continuous_buffer_duration`: \[[Duration](/api-docs#Duration)\] | None
-
-The minimum period of time for which to sample data directly via online query, rather than from the backfilled aggregations.
 
 ## Backfilling data and managing aggregation
 
@@ -86,17 +87,17 @@ Chalk provides multiple ways to backfill and update your windowed aggregations.
 
 You can control how your aggregations are backfilled by:
 
-1. Supplying a cron expression ([CronTab](/api-docs#CronTab)) to the `backfill_schedule` keyword parameter
-1. Supplying a [Duration](/api-docs#Duration)] to `continuous_buffer_duration`
-1. Triggering a backfill job using the Chalk ClI
+1. Supplying a cron expression ([CronTab](/api-docs#CronTab)) to the `backfill_schedule` keyword parameter.
+2. Supplying a [Duration](/api-docs#Duration) to `continuous_buffer_duration`.
+3. Triggering a backfill job using the Chalk CLI with [`chalk aggregate backfill`](/cli/aggregate_backfill).
 
-### Cron expression
+### Cron Schedule Expression
 
 ```python
 @features
 class User:
     id: int
-    transactions: DataFrame[transactions]
+    transactions: DataFrame[Transactions]
     total_transaction_amount: Windowed[int] = windowed(
         "10d",
         "90d",
@@ -111,30 +112,30 @@ class User:
 
 In the example above, we supply a cron expression that's set to run daily at midnight (`"0 0 * * *"`) into the
 `backfill_schedule` parameter of the `materialization` config.
-Now `backfill_schedule` has been set, `total_transaction_amount` feature will be backfilled every day.
+Now `backfill_schedule` has been set, the `total_transaction_amount` feature will be backfilled every day.
 
-### Continuous buffer
+### Continuous Buffer
 
-In addition to backfilling your aggregation with recurring batch job, you can also integrate fresh data into your
+In addition to backfilling your aggregation with the recurring batch job, you can also integrate fresh data into your
 windowed aggregation with continuous backfills.
 Continuous backfills can be configured by supplying a [Duration](/api-docs#Duration)] to the `continuous_buffer_duration` e.g. `"36h"`.
 Chalk will compute data within your `continuous_buffer_duration` directly from your online resolvers.
 
-Note: Chalk includes all the data contained in overlapping buckets.
+
+<TipInfo>Note: Chalk includes all the data contained in overlapping buckets.
 We suggest shortening the bucket duration, if the time delta between the end of your window interval and the boundary
-of the last overlapping bucket exceeds the constraints of your use case.
+of the last overlapping bucket exceeds the constraints of your use case.</TipInfo>
 
 If `continuous_buffer_duration` is not set, then Chalk will only serve data from the backfilled aggregations.
 
 ![no continuous buffer duration](/img/mat_windowed_aggs/no_cont_buf_dur.png)
 
-If `continuous_buffer_duration` is set, and the time window between the end of the last bucket and the current time
-is greater than the `continuous_buffer_duration`, Chalk will run online resolvers to compute the data for this
-time window.
+If `continuous_buffer_duration` is set, and its value is less than the duration between the end of the last bucket
+and the current time, Chalk will run online resolvers to compute the data for thistime window.
 
 ![12h continuous buffer duration](/img/mat_windowed_aggs/12h_cont_buf_dur.png)
 
-If the `continuous_buffer_duration` is longer than the time window between the end of the last bucket and the current time,
+If the `continuous_buffer_duration` is longer than the duration between the end of the last bucket and the current time,
 Chalk will run online resolvers to compute the data from the start of the most recently filled bucket to now.
 
 ![20h continuous buffer duration](/img/mat_windowed_aggs/20h_cont_buf_dur.png)
@@ -155,10 +156,10 @@ To view existing aggregations, use [`chalk aggregate list`](/cli/aggregate_list)
 ```
 
 The series column shows the unique ID of the timeseries data underlying our aggregation system.
-Each unique combination of [namespace](/docs/features#namespacing), group (see `group_by_windowed`), and agg (the feature to aggregate) columns
-represents a separate timeseries.
+Each unique combination of the [`Namespace`](/docs/features#namespacing),
+`Group` (see `group_by_windowed`), and `Agg` (the aggregated feature) columns represents a separate timeseries.
 When possible, Chalk will use the same timeseries data to serve multiple features.
 
-Bucket shows the current bucket size.
-Retention shows the maximum time window of any feature that depends on the given timeseries.
-Dependent features list the features that are served by the given timeseries.
+Other useful information here is the `Bucket` column, which shows the current bucket size.
+The `Retention` column shows the maximum time window of any feature that depends on the given timeseries.
+The `Dependent Features` column lists the features that are served by the given timeseries.
