--- a/changelog.mdx
+++ b/changelog.mdx
@@ -11,7 +11,7 @@ description: Updates to Chalk!
 
 We’ve implemented [**KEDA (Kubernetes-based Event Driven Autoscaler)**](https://keda.sh/) and are rolling it out to all customer clusters over the next few weeks.
 With KEDA, your environment now dynamically scales up and down--even to **zero machines** when there’s reduced or no workload.
-With automatic scaling we're able to optimize resource usage and reduce cloud costs--expect to see a drop in your cloud spend as a result.
+With automatic scaling we're able to optimize resource usage--expect to see a drop in cloud spend as a result!
 
 ## View logs and export metrics using the CLI
 
