--- a/changelog.mdx
+++ b/changelog.mdx
@@ -19,7 +19,7 @@ View logs using the Chalk CLI; inspect your log stream the same way you would fr
 
 `chalk logs [--query="the same string you can put in the web ui"]`
 
-Chalk supports directly exporting metrics to an OpenMetrics compatible collector, you can now also view a sample of your metrics export using the CLI with `chalk metrics export`.
+Chalk supports continuously exporting metrics to an OpenMetrics compatible collector, you can now also view a sample of your metrics export using the CLI with `chalk metrics export`.
 This helps considerably when experimenting with deploying a new collector.
 Read more about how to [view logs](https://docs.chalk.ai/cli/chalk) and how to [export metrics](https://docs.chalk.ai/cli/chalk) using the [Chalk CLI in our docs.](Read more about how to )
 
