--- a/faq.mdx
+++ b/faq.mdx
@@ -202,7 +202,7 @@ offline query is a combination of checking the query run in dashboard and the st
 visibility, you can also add the `run_asynchronously=True` argument to `ChalkClient.offline_query` to explicitly run
 your offline query on an isolated worker so you can use the worker status as a query status.
 
-### How do I query for a random sample of instances from a features class?
+### How do I sample of instances of a feature class?
 
 You can query for random instances of a feature class by running an offline query and specifying the `max_samples`
 parameter. For instance, running the example query below will sample ten random users from the `User` feature class,
