--- a/faq.mdx
+++ b/faq.mdx
@@ -206,7 +206,7 @@ your offline query on an isolated worker so you can use the worker status as a q
 
 You can query for random instances of a feature class by running an offline query and specifying the `max_samples`
 parameter. For instance, running the example query below will sample ten random users from the `User` feature class,
-returning the features specified by the output parameter: [`User.id`, `User.name`, `User.age`].
+returning the features specified by the output parameters: [`User.id`, `User.name`, `User.age`].
 
 ```python
 from chalk.client import ChalkClient
