fix image references

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -13,14 +13,14 @@ You can now search logs in the Logs Explorer in the dashboard using a key-value 
 `key1:value1 key2:value2 ...`. This allows you to combine multiple filters at once. The Logs Explorer
 displays the available keywords for filtering, shown below.
 
-![Updated log explorer](/img/log-search-filters.png)
+![Updated log explorer](/img/log_search_filters.png)
 
 ### Search by file name in the source code viewer
 
 The Source Code Viewer on the Deployments page of the dashboard has been extended!
 In addition to searching for keywords in your source code, you can now also search for your files by name.
 
-![Source code viewer with file search](/img/view-source-file-explorer.png)
+![Source code viewer with file search](/img/view_source_file_explorer.png)
 
 ### Include query context in Chalk Client queries
 
