--- a/changelog.mdx
+++ b/changelog.mdx
@@ -7,13 +7,13 @@ description: Updates to Chalk!
 
 ## January 6, 2025
 
-## Reduced cloud costs from optimized resource usage with KEDA
+### Reduced cloud costs from optimized resource usage with KEDA
 
 We've implemented [**KEDA (Kubernetes-based Event Driven Autoscaler)**](https://keda.sh/) and are rolling it out to all customer clusters over the next few weeks.
 With KEDA, Chalk environments can now dynamically scale up and down--even to **zero machines** when there is reduced or no workload.
 With automatic scaling, we are able to optimize resource usage--expect to see a drop in cloud spending as a result!
 
-## View logs and export metrics using the CLI
+### View logs and export metrics using the CLI
 
 View logs using the Chalk CLI; inspect your log stream the same way you would from the Chalk dashboard but with the command line:
 
@@ -23,7 +23,7 @@ Chalk supports directly exporting metrics to an OpenMetrics compatible collector
 The new metrics export CLI command helps considerably when experimenting with deploying a new collector.
 Read more about how to [view logs](https://docs.chalk.ai/cli/chalk) and how to [export metrics](https://docs.chalk.ai/cli/chalk) using the [Chalk CLI in our docs.](Read more about how to )
 
-## Visualize and trace your feature's data lineage with a Graph View
+### Visualize and trace your feature's data lineage with a Graph View
 
 The Data Lineage page in the Chalk dashboard lets you track your features, specifically how they are derived, when they are referenced (Named Queries), etc.
 In addition to the default list view, we have implemented a graph view, making it easier than ever to trace how your features are created and connected.
