Adding the graph

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -13,20 +13,20 @@ We've implemented [**KEDA (Kubernetes-based Event Driven Autoscaler)**](https://
 With KEDA, Chalk environments can now dynamically scale up and down--even to **zero machines** when there is reduced or no workload.
 With automatic scaling, we are able to optimize resource usage--expect to see a drop in cloud spending as a result!
 
-### View logs and export metrics using the CLI
+### View and query logs using the CLI
 
-View logs using the Chalk CLI; inspect your log stream the same way you would from the Chalk dashboard but with the command line:
+Inspect your log stream the same way you would from the Chalk dashboard but with the command line:
 
 `chalk logs [--query="the same string you can put in the web ui"]`
 
-Chalk supports directly exporting metrics to an OpenMetrics compatible collector; you can now also view a sample of your metrics export using the CLI with `chalk metrics export.`
-The new metrics export CLI command helps considerably when experimenting with deploying a new collector.
-Read more about how to [view logs](https://docs.chalk.ai/cli/chalk) and how to [export metrics](https://docs.chalk.ai/cli/chalk) using the [Chalk CLI in our docs.](Read more about how to )
+Read more about how to view [logs using the Chalk CLI in our docs.](https://docs.chalk.ai/cli/logs)
 
 ### Visualize and trace your feature's data lineage with a Graph View
 
 The Data Lineage page in the Chalk dashboard lets you track your features, specifically how they are derived, when they are referenced (Named Queries), etc.
 In addition to the default list view, we have implemented a graph view, making it easier than ever to trace how your features are created and connected.
+
+![Graph view for a data lineage](/img/changelog-datalineage.png)
 
 ---
 
