--- a/changelog.mdx
+++ b/changelog.mdx
@@ -5,6 +5,31 @@ metaDescription: Chalk's latest updates.
 description: Updates to Chalk!
 ---
 
+## January 6, 2025
+
+### Reduced cloud costs from optimized resource usage with KEDA
+
+We've implemented [**KEDA (Kubernetes-based Event Driven Autoscaler)**](https://keda.sh/) and are rolling it out to all customer clusters over the next few weeks.
+With KEDA, Chalk environments can now dynamically scale up and down--even to **zero machines** when there is reduced or no workload.
+With automatic scaling, we are able to optimize resource usage--expect to see a drop in cloud spending as a result!
+
+### View and query logs using the CLI
+
+Inspect your log stream the same way you would from the Chalk dashboard but with the command line:
+
+`chalk logs [--query="the same string you can put in the web ui"]`
+
+Read more about how to view [logs using the Chalk CLI in our docs.](https://docs.chalk.ai/cli/logs)
+
+### Visualize and trace your feature's data lineage with a Graph View
+
+The Data Lineage page in the Chalk dashboard lets you track your features, specifically how they are derived, when they are referenced (Named Queries), etc.
+In addition to the default list view, we have implemented a graph view, making it easier than ever to trace how your features are created and connected.
+
+![Graph view for a data lineage](/img/changelog-datalineage.png)
+
+---
+
 ## December 23, 2024
 
 ### Search and filter logs by query name, log message, deployment, and more!
