--- a/changelog.mdx
+++ b/changelog.mdx
@@ -10,8 +10,7 @@ description: Updates to Chalk!
 ### Reduced cloud costs from optimized resource usage with KEDA
 
 We've implemented [**KEDA (Kubernetes-based Event Driven Autoscaler)**](https://keda.sh/) and are rolling it out to all customer clusters over the next few weeks.
-With KEDA, Chalk environments can now dynamically scale up and down--even to **zero machines** when there is reduced or no workload.
-With automatic scaling, we are able to optimize resource usage--expect to see a drop in cloud spending as a result!
+With KEDA, Chalk environments can now dynamically scale up and down-- even to *zero machines* during periods of reduced or no workload. This scaling enables optimized resource usage. We’re looking forward to seeing how this enhances efficiency across your environments!
 
 ### View and query logs using the CLI
 
