--- a/changelog.mdx
+++ b/changelog.mdx
@@ -7,10 +7,10 @@ description: Updates to Chalk!
 
 ## January 6, 2025
 
-### Reduced cloud costs from optimized resource usage with KEDA
+### Optimized resource usage with KEDA
 
 We've implemented [**KEDA (Kubernetes-based Event Driven Autoscaler)**](https://keda.sh/) and are rolling it out to all customer clusters over the next few weeks.
-With KEDA, Chalk environments can now dynamically scale up and down-- even to *zero machines* during periods of reduced or no workload. This scaling enables optimized resource usage. We’re looking forward to seeing how this enhances efficiency across your environments!
+With KEDA, we've expanded the types of resources that can be dynamically scaled up and down during periods of reduced or no workload.
 
 ### View and query logs using the CLI
 
