--- a/changelog.mdx
+++ b/changelog.mdx
@@ -11,6 +11,7 @@ description: Updates to Chalk!
 
 We've implemented [**KEDA (Kubernetes-based Event Driven Autoscaler)**](https://keda.sh/) and are rolling it out to all customer clusters over the next few weeks.
 With KEDA, we've expanded the types of resources that can be dynamically scaled up and down during periods of reduced or no workload.
+We look forward to potential improvements both in the elasticity and efficiency of your deployments.
 
 ### View and query logs using the CLI
 
