--- a/materialized_aggregations.mdx
+++ b/materialized_aggregations.mdx
@@ -49,7 +49,7 @@ When serving windowed queries, Chalk uses all buckets containing any overlap wit
 
 ## What types of aggregations does Chalk support?
 
-Chalk supports a number of aggrgations out of box--Chalk builtins are very performant as they're optimized and also run natively (in C++ +/ Rust).
+Chalk supports a number of aggregations out of box. Chalk builtins are very performant as they're optimized and also run natively in C++ and Rust. 
 Aggregations automatically skip null or `None` values.
 The following table lists the supported aggregations along with some notes.
 
